--- a/addon/package.json
+++ b/addon/package.json
@@ -9,7 +9,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
+  "devDependencies": {
     "node-gyp": "^8.4.0"
   }
 }
